--- a/trashwheel_final_assignment.ipynb
+++ b/trashwheel_final_assignment.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Step 1: Introduction\n",
-    "# Trash Wheel Dataset Analysis—Module 1 Final Assignment\n",
+    "# Monthly Trash Weight Prediction using Machine Learning\n",
     "\n",
     "# Project Overview\n",
     "This project explores data from the Mr.Trash Wheel initiative in Baltimore Harbor, which collects floating debris from the water.\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "7ad86a20",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "id": "d65cb093",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "4        368.0     753.0          7.0             0  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "id": "7ec4a075",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "id": "f5058c68",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
        "4        368.0     753.0          7.0             0  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "d6e0c5c8",
    "metadata": {},
    "outputs": [],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "8d425f4c",
    "metadata": {},
    "outputs": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "6e1f4789",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "id": "01bc9f6f",
    "metadata": {},
    "outputs": [
@@ -690,10 +690,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "eac48b98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'features' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m train \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39miloc[:split]\n\u001b[0;32m      3\u001b[0m test  \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39miloc[split:]\n\u001b[1;32m----> 5\u001b[0m X_train \u001b[38;5;241m=\u001b[39m train[\u001b[43mfeatures\u001b[49m]\n\u001b[0;32m      6\u001b[0m y_train \u001b[38;5;241m=\u001b[39m train[target]\n\u001b[0;32m      8\u001b[0m X_test \u001b[38;5;241m=\u001b[39m test[features]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'features' is not defined"
+     ]
+    }
+   ],
    "source": [
     "split = int(len(df) * 0.8)\n",
     "train = df.iloc[:split]\n",
@@ -727,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "3fd7e05c",
    "metadata": {},
    "outputs": [],
@@ -768,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "d0961814",
    "metadata": {},
    "outputs": [
@@ -811,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "70087e16",
    "metadata": {},
    "outputs": [
@@ -860,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "aebda80e",
    "metadata": {},
    "outputs": [
@@ -916,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "094734a6",
    "metadata": {},
    "outputs": [],
@@ -949,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "fde2ad6f",
    "metadata": {},
    "outputs": [
