--- a/trashwheel_m1_final_assignment.ipynb
+++ b/trashwheel_m1_final_assignment.ipynb
@@ -13,7 +13,7 @@
     "The goal is to build a regression model that predicts the *monthly weight (tons)* of collected trash based on weather and debris related variables.\n",
     "\n",
     "# Business Question\n",
-    "Can I predict how much trash will be collected in a month, based on rainfall, item counts, and past months data?\n",
+    "Can we predict how much trash will be collected in a month, based on rainfall, item counts, and past months data?\n",
     "Such a model helps city planners allocate resources and prepare for storm heavy months.\n",
     "\n",
     "# ML Objective\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "7ad86a20",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "d65cb093",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "4        368.0     753.0          7.0             0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "7ec4a075",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "f5058c68",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
        "4        368.0     753.0          7.0             0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "d6e0c5c8",
    "metadata": {},
    "outputs": [],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "8d425f4c",
    "metadata": {},
    "outputs": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "6e1f4789",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "01bc9f6f",
    "metadata": {},
    "outputs": [
@@ -690,24 +690,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "eac48b98",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'features' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m train \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39miloc[:split]\n\u001b[0;32m      3\u001b[0m test  \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39miloc[split:]\n\u001b[1;32m----> 5\u001b[0m X_train \u001b[38;5;241m=\u001b[39m train[\u001b[43mfeatures\u001b[49m]\n\u001b[0;32m      6\u001b[0m y_train \u001b[38;5;241m=\u001b[39m train[target]\n\u001b[0;32m      8\u001b[0m X_test \u001b[38;5;241m=\u001b[39m test[features]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'features' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# define features and target\n",
+    "features = [\n",
+    "    'Month',\n",
+    "    'Year',\n",
+    "    'PlasticBottles',\n",
+    "    'Polystyrene',\n",
+    "    'CigaretteButts',\n",
+    "    'GlassBottles',\n",
+    "    'PlasticBags',\n",
+    "    'Wrappers',\n",
+    "    'SportsBalls'\n",
+    "]\n",
+    "\n",
+    "target = 'Volume'\n",
+    "\n",
+    "# train-test split\n",
     "split = int(len(df) * 0.8)\n",
+    "\n",
     "train = df.iloc[:split]\n",
     "test  = df.iloc[split:]\n",
     "\n",
@@ -715,8 +720,7 @@
     "y_train = train[target]\n",
     "\n",
     "X_test = test[features]\n",
-    "y_test = test[target]\n",
-    "\n"
+    "y_test = test[target]\n"
    ]
   },
   {
@@ -739,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "3fd7e05c",
    "metadata": {},
    "outputs": [],
@@ -780,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "d0961814",
    "metadata": {},
    "outputs": [
@@ -823,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "70087e16",
    "metadata": {},
    "outputs": [
@@ -872,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "aebda80e",
    "metadata": {},
    "outputs": [
@@ -880,7 +884,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Fusion\\AppData\\Local\\Temp\\ipykernel_3180\\3952781351.py:4: FutureWarning: The NumPy global RNG was seeded by calling `np.random.seed`. In a future version this function will no longer use the global RNG. Pass `rng` explicitly to opt-in to the new behaviour and silence this warning.\n",
+      "C:\\Users\\Fusion\\AppData\\Local\\Temp\\ipykernel_1884\\3952781351.py:4: FutureWarning: The NumPy global RNG was seeded by calling `np.random.seed`. In a future version this function will no longer use the global RNG. Pass `rng` explicitly to opt-in to the new behaviour and silence this warning.\n",
       "  shap.summary_plot(shap_values, X_train)\n"
      ]
     },
@@ -928,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "094734a6",
    "metadata": {},
    "outputs": [],
@@ -961,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "fde2ad6f",
    "metadata": {},
    "outputs": [
@@ -969,50 +973,50 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-16 19:06:31.967 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:31.975 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:31.980 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:31.981 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.196 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.196 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.196 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.209 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.209 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.209 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.215 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.215 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.215 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.220 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.220 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.229 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.231 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.233 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.233 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.236 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.237 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.237 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.237 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.246 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.248 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.248 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.250 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.250 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.250 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.256 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.258 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.263 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.265 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.269 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.271 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.275 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.275 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.279 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.281 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.283 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.283 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.332 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.332 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-12-16 19:06:32.332 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+      "2025-12-24 19:25:12.281 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.282 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.286 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.286 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.379 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.380 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.380 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.381 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.381 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.381 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.384 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.386 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.386 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.388 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.388 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.390 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.390 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.392 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.393 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.394 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.396 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.397 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.398 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.399 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.399 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.399 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.399 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.401 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.403 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.403 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.404 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.404 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.404 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.407 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.407 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.407 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.408 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.411 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.412 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.412 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.413 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.431 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.431 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-12-24 19:25:12.431 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
      ]
     },
     {
@@ -1021,7 +1025,7 @@
        "DeltaGenerator()"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
